[package]
name = "AdventOfCode2022"
version = "0.1.0"
authors = ["Mateusz Kwapich <mateusz@kwapich.it>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
maplit = "1.0.2"
multiset = "0.0.5"
regex = "1.7.0"
itertools = "0.10.5"
text_io = "0.1.12"
scan-rules = "0.2.0"
json = "0.12.4"
serde_json = "1.0"
serde = { version = "1.0.150", features = ["derive"] }
smallset = "0.1.1"
rayon = "1.5"
radix_fmt = "1.0.0"
gray-codes = "0.1.1"
multimap = "0.8.3"
strum = { version = "0.24", features = ["derive"] }

fixedbitset = "0.4.2"

[[bin]]
name = "01a"
path = "src/01a.rs"
