[package]
name = "AdventOfCode2023"
version = "0.1.0"
authors = ["Mateusz Kwapich <mateusz@kwapich.it>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
maplit = "1.0.2"
multiset = "0.0.5"
regex = "1.7.0"
itertools = "0.10.5"
text_io = "0.1.12"
scan-rules = "0.2.0"
json = "0.12.4"
serde_json = "1.0"
serde = { version = "1.0.150", features = ["derive"] }
smallset = "0.1.1"
rayon = "1.5"
radix_fmt = "1.0.0"
num = "0.4.1"
gray-codes = "0.1.1"
multimap = "0.8.3"
strum = { version = "0.24", features = ["derive"] }
memoize = "0.4.1"
fixedbitset = "0.4.2"

[[bin]]
name = "01a"
path = "src/01a.rs"

[[bin]]
name = "01b"
path = "src/01b.rs"

[[bin]]
name = "02a"
path = "src/02a.rs"


[[bin]]
name = "02b"
path = "src/02b.rs"

[[bin]]
name = "03a"
path = "src/03a.rs"

[[bin]]
name = "03b"
path = "src/03b.rs"

[[bin]]
name = "04a"
path = "src/04a.rs"

[[bin]]
name = "04b"
path = "src/04b.rs"

[[bin]]
name = "05a"
path = "src/05a.rs"

[[bin]]
name = "05b"
path = "src/05b.rs"

[[bin]]
name = "06a"
path = "src/06a.rs"

[[bin]]
name = "06b"
path = "src/06b.rs"

[[bin]]
name = "07a"
path = "src/07a.rs"

[[bin]]
name = "07b"
path = "src/07b.rs"

[[bin]]
name = "08a"
path = "src/08a.rs"

[[bin]]
name = "08b"
path = "src/08b.rs"

[[bin]]
name = "09a"
path = "src/09a.rs"

[[bin]]
name = "09b"
path = "src/09b.rs"

[[bin]]
name = "10a"
path = "src/10a.rs"

[[bin]]
name = "10b"
path = "src/10b.rs"


[[bin]]
name = "11a"
path = "src/11a.rs"

[[bin]]
name = "11b"
path = "src/11b.rs"

[[bin]]
name = "12a"
path = "src/12a.rs"

[[bin]]
name = "12b"
path = "src/12b.rs"

[[bin]]
name = "13a"
path = "src/13a.rs"

[[bin]]
name = "13b"
path = "src/13b.rs"

[[bin]]
name = "14a"
path = "src/14a.rs"

[[bin]]
name = "14b"
path = "src/14b.rs"
